Fix exposed filter alignment

--- a/css/style.css
+++ b/css/style.css
@@ -8638,6 +8638,12 @@ nav.tabs {
   }
 }
 
+/********************* VIEWS *********************/
+.views-exposed-form .form-item {
+  float: none;
+  display: inline-block;
+}
+
 /********************* MAINTENANCE *********************/
 .maintenance-page main {
   text-align: center;
