--- a/scss/_drupal-bootstrap.scss
+++ b/scss/_drupal-bootstrap.scss
@@ -744,6 +744,14 @@ nav.tabs {
   }
 }
 
+/********************* VIEWS *********************/
+.views-exposed-form {
+  .form-item {
+    float: none;
+    display: inline-block;
+  }
+}
+
 /********************* MAINTENANCE *********************/
 .maintenance-page {
   main {
